# SABRmetrics

./: .gitignore  LICENSE  Pipfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: baseball-reference.yml  pylint.yml  pytest.yml
docs/source/: conf.py  index.rst
sabrmetrics/: __init__.py  playerids.py
sabrmetrics/mlb/: __init__.py  address.py  divisions.py  league.py  leagues.py  scraper.py  standings.py
sabrmetrics/player_ids/: __init__.py  _sfbb.py  idmap.py
sabrmetrics/player_ids/data/: sites.json
sabrmetrics/player_ids/data/columns/: changelog_colmap.json  changelog_columns.json  idmap_colmap.json  idmap_columns.json
sabrmetrics/sfbb/: __init__.py  _headers.py  _tools.py  tools.py
sabrmetrics/sfbb/data/: headers.json
sabrmetrics/sites/: _scrape.py
sabrmetrics/sites/baseball_reference/: __init__.py  _urls.py  players.py
sabrmetrics/tests/: __init__.py  test_playerids.py
sabrmetrics/tests/test_mlb/: test_address.py  test_league.py  test_standings.py
sabrmetrics/tests/test_sfbb/: __init__.py  test_headers.py  test_tools.py
sabrmetrics/tests/test_sites/: __init__.py  players.txt
sabrmetrics/tests/test_sites/test_baseball_reference/: __init__.py  test_batters.txt  test_pitchers.txt  test_players.py  test_urls.py
