[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sabrmetrics"
version = "0.6.0"
description = "A web scraper for SABRmetrics websites"
readme = "README.md"
authors = [ { name = "Jacob Lee", email = "Jacob.J.Lee@outlook.com" } ]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 1 - Planning",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
requires-python = ">=3.6"
dependencies = [
    "beautifulsoup4==4.12.2",
    "certifi==2023.7.22 ; python_version >= '3.6'",
    "charset-normalizer==3.2.0 ; python_full_version >= '3.7.0'",
    "idna==3.4 ; python_version >= '3.5'",
    "lxml==4.9.3",
    "numpy==1.25.2",
    "pandas==2.1.0",
    "python-dateutil==2.8.2",
    "pytz==2023.3.post1",
    "requests==2.31.0",
    "six==1.16.0 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'",
    "soupsieve==2.5 ; python_version >= '3.8'",
    "tzdata==2023.3 ; python_version >= '2'",
    "urllib3==2.0.4 ; python_version >= '3.7'"
]

[project.urls]
homepage = "https://github.com/JacobLee23/SABRmetrics"

[tool.setuptools.packages.find]
where = ["."]
include = ["sabrmetrics*"]
exclude = [
    "sabrmetrics.docs*",
]
